# structured-query-builder

./: .gitignore  AGENT_HANDOFF.md  AGENT_HANDOFF.md.ANTIDOTE  AGENT_HANDOFF_HISTORICAL_AUDIT.md  AGENT_HANDOFF_ITERATION_2.md  AUDIT_ACTION_SUMMARY.md  AUDIT_MATERIALS_INVENTORY.md  BUGS_Q30_Q41.md  CLAUDE.md  CULLING_COMPLETE.md  DEPRECATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  POISON_AUDIT_REPORT.md  README.md  REPOSITORY_AUDIT_2025-11-29.md  REPOSITORY_HISTORY_AUDIT.md  UNIQUE_VALUE_ANALYSIS.md  WORK_COMPLETE.md  explore_vertexai.py  extract_docs_v2.sh  fix_queries.py  fixed_queries_Q30_41.py  justfile  main.py  pyproject.toml
.claude/workflows/: POISON_FRAMEWORK.md  README.md  audit-history.sh  poison-detector.sh  poison-manager.sh
archive/defensive-overcorrection/: BIMODAL_QUERIES_COMPLETE.md  BIMODAL_QUERIES_HONEST_ASSESSMENT.md  NOTE.md  PROJECT_ALIGNMENT_ANALYSIS.md
archive/deprecated-claims/: IMPLEMENTATION_SUMMARY.md  README.md  (+3 more)
examples/: basic_queries.py  bimodal_pricing_queries.py  bimodal_queries_WORKING.py  phase1_queries.py  phase2_queries.py  phase3_queries.py  phase3_queries_backup.py  pricing_analyst_queries.py  pricing_intelligence_queries.py  realistic_pricing_queries.py
intelligence_models/: pricing_analyst_intelligence_model.yaml  query_implementation_mapping.yaml
original_task_request/: brainstorming-report-sql-query-builder.md  conceptual_corrections.yaml  task-context-sql-query-builder.yaml
structured_query_builder/: __init__.py  clauses.py  enums.py  expressions.py  query.py  query_registry.py  schema_utils.py  translator.py
(+69 files in other folders)
